--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
-site_name: 'ESIIL Innovation Summit 2024'
-site_description: 'Summit 2024'
+site_name: 'ESIIL Innovation Summit 2024 Group 11'
+site_description: 'Summit 2024 Group 11'
 site_author: ESIIL staff
-site_url: https://cu-esiil.github.io/innovation-summit-2024
+site_url: https://cu-esiil.github.io/innovation-summit-2024-group-11
 
 # Repository
-repo_name: Innovation-Summit-2024
+repo_name: Innovation-Summit-2024__11_Societal-adaptation-and-resilience-to-environmental-change
 repo_url: https://github.com/CU-ESIIL/Innovation-Summit-2024__11_Societal-adaptation-and-resilience-to-environmental-change
 edit_uri: edit/main/docs/
 # Copyright
